Bug 358853 - crash opening html sidebar with xul frame while having remember passwords enabled [@ nsPasswordManager::FillDocument], r=enndeakin